added first name & last name on register page

--- a/themes/wowonder/layout/welcome/register.phtml
+++ b/themes/wowonder/layout/welcome/register.phtml
@@ -27,6 +27,14 @@ $fields = Wo_GetWelcomeFileds();
 				<p class="title"><?php echo $wo['lang']['sign_up']?></p>
 				<div class="errors"></div>
 				<div class="wow_form_fields">
+					<label for="first_name"><?php echo $wo['lang']['first_name']?></label>
+					<input id="first_name" name="first_name" type="helperText" />
+				</div>
+				<div class="wow_form_fields">
+					<label for="last_name"><?php echo $wo['lang']['last_name']?></label>
+					<input id="last_name" name="last_name" type="text" />
+				</div>
+				<div class="wow_form_fields">
 					<input id="username" name="username" type="text" autocomplete="off" autofocus hidden>
 				</div>
 				<div class="wow_form_fields">
